--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,9 @@ algorand:
         live_common:
             repository: git@github.com:Ledger-Coin-Integration-team/ledger-live-common.git
             branch: algorand
+        live-desktop:
+            repository: # TODO
+            branch: #TODO
         cli_options:
             - API_ALGORAND_BLOCKCHAIN_EXPLORER_API_ENDPOINT=https://mainnet-algorand.api.purestake.io
             - EXPERIMENTAL_CURRENCIES=algorand
@@ -39,6 +42,9 @@ algorand_test:
         live_common:
             repository: git@github.com:Ledger-Coin-Integration-team/ledger-live-common.git
             branch: algorand
+        live-desktop:
+            repository: # TODO
+            branch: #TODO
         cli_options:
             - API_ALGORAND_BLOCKCHAIN_EXPLORER_API_ENDPOINT=https://testnet-algorand.api.purestake.io
             - EXPERIMENTAL_CURRENCIES=algorand
