--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@ algorand:
         libcore:
             repository: git@github.com:Ledger-Coin-Integration-team/lib-ledger-core.git
             branch: int-algorand-libcorev1
-            commit: b07b4de6cc28c4961e0968b245740ccb6fb8d620
+            #commit: b07b4de6cc28c4961e0968b245740ccb6fb8d620
         bindings:
             repository: git@github.com:Ledger-Coin-Integration-team/lib-ledger-core-node-bindings.git
             branch: int-algorand
@@ -12,7 +12,7 @@ algorand:
         live_common:
             repository: git@github.com:Ledger-Coin-Integration-team/ledger-live-common.git
             branch: algorand
-            commit: 132651dfd6a2ed5021b34da00a3066edca0d4e71
+            #commit: 132651dfd6a2ed5021b34da00a3066edca0d4e71
         live_desktop:
             repository: git@github.com:LFBarreto/ledger-live-desktop.git
             branch: LL-2719
