--- a/config.yml
+++ b/config.yml
@@ -4,31 +4,16 @@ algorand:
         libcore:
             repository: git@github.com:Ledger-Coin-Integration-team/lib-ledger-core.git
             branch: int-algorand-libcorev1
-            #commit: b07b4de6cc28c4961e0968b245740ccb6fb8d620
         bindings:
             repository: git@github.com:Ledger-Coin-Integration-team/lib-ledger-core-node-bindings.git
             branch: int-algorand
-            commit: f1c37acae02932510c711c23d60ef28d72315464
+            #commit: f1c37acae02932510c711c23d60ef28d72315464
         live_common:
             repository: git@github.com:Ledger-Coin-Integration-team/ledger-live-common.git
             branch: algorand
-            #commit: 132651dfd6a2ed5021b34da00a3066edca0d4e71
         live_desktop:
             repository: git@github.com:LFBarreto/ledger-live-desktop.git
             branch: LL-2719
-    vault:
-        libcore:
-            repository: git@github.com:LedgerHQ/lib-ledger-core.git
-            branch: develop
-        wallet_daemon:
-            repository: git@github.com:Ledger-Coin-Integration-team/ledger-wallet-daemon.git
-            branch: COIN-435-stellar-integration
-        vault_integration:
-            repository: git@github.com:LedgerHQ/vault-integration.git
-            branch: master
-        vault_front:
-            repository: git@github.com:LedgerHQ/ledger-vault-front.git
-            branch: coin/stellar
 
 # Algorand: TestNet
 algorand_test:
@@ -62,3 +47,19 @@ algorand_bot_dev:
             branch: algorand
         options:
             - API_ALGORAND_BLOCKCHAIN_EXPLORER_API_ENDPOINT=https://testnet-algorand.api.purestake.io
+
+stellar:
+    vault:
+        libcore:
+            repository: git@github.com:LedgerHQ/lib-ledger-core.git
+            branch: develop
+            commit: 78a3b0f08e5e5adfa0a9220128e5c27d8feadabb
+        wallet_daemon:
+            repository: git@github.com:Ledger-Coin-Integration-team/ledger-wallet-daemon.git
+            branch: COIN-435-stellar-integration
+        vault_integration:
+            repository: git@github.com:noirbizarre/vault-integration.git
+            branch: all-in-one
+        vault_front:
+            repository: git@github.com:LedgerHQ/ledger-vault-front.git
+            branch: coin/stellar
